feat(messages): option to remove background
This is if people want the messages to blend with their own site's background rather than using Discord's background color

--- a/src/components/discord-messages/discord-messages.css
+++ b/src/components/discord-messages/discord-messages.css
@@ -16,3 +16,7 @@
 	background-color: #f7f7f7;
 	border-color: #dedede;
 }
+
+.discord-messages.discord-no-background {
+	background-color: unset;
+}
