--- a/src/components/author-info/author-info.css
+++ b/src/components/author-info/author-info.css
@@ -19,10 +19,24 @@
 	background-color: #7289da;
 	font-size: 0.65em;
 	margin-left: 5px;
-	padding: 3px;
 	border-radius: 3px;
 	line-height: 100%;
 	text-transform: uppercase;
+	/* Use flex layout to ensure both verified icon and "BOT" text are aligned to center */
+	display: flex;
+	align-items: center;
+	/* Styling taken through Inspect Element on Discord client for Windows */
+	height: 0.9375rem;
+	padding: 0 0.275rem;
+	margin-top: 0.075em;
+	border-radius: 0.1875rem;
+}
+
+.discord-message .discord-author-info .discord-bot-tag-verified {
+	display: inline-block;
+	width: 0.9375rem;
+	height: 0.9375rem;
+	margin-left: -0.25rem;
 }
 
 .discord-light-theme .discord-message .discord-author-info .discord-bot-tag {
