--- a/src/components/discord-message/discord-message.css
+++ b/src/components/discord-message/discord-message.css
@@ -2,17 +2,20 @@
 	color: #dcddde;
 	display: flex;
 	font-size: 0.9em;
-	padding: 1em 0.5em;
-	border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+	margin: 1em 0;
+	padding: 0.25em 1em 0;
+}
+
+.discord-message:hover {
+	background-color: #32353b;
 }
 
 .discord-light-theme .discord-message {
 	color: #2e3338;
-	border-color: #eceeef;
 }
 
-.discord-message:last-of-type {
-	border-bottom-width: 0;
+.discord-light-theme .discord-message:hover {
+	background-color: #fafafa;
 }
 
 .discord-message a {
@@ -85,8 +88,9 @@
 }
 
 .discord-compact-mode .discord-message {
-	padding-top: 0.5em;
-	padding-bottom: 0.5em;
+	margin: 0.15em 0;
+	padding-left: 0.25em;
+	padding-right: 0.25em;
 }
 
 .discord-compact-mode .discord-author-avatar {
