--- a/src/components/author-info/author-info.css
+++ b/src/components/author-info/author-info.css
@@ -16,7 +16,7 @@
 }
 
 .discord-message .discord-author-info .discord-bot-tag {
-	background-color: #7289da;
+	background-color: #5865F2;
 	font-size: 0.65em;
 	margin-left: 5px;
 	padding: 3px;
